crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__builtin_sharing__discarded_data_default.snap
---
source: crates/nash-codegen/src/optimizer_tests/builtin_sharing.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
case@Data iData 42 of
  DataConstr unused#3 -> 42
  DataMap unused#4 -> 42
  DataList unused#5 -> 42
  DataI unused#6 -> 42
  DataB unused#7 -> 42
  _ -> case@Bool true of
    True -> trace "never" in error
    _ -> error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_8
    (force
      [[[[[[(force (builtin chooseData)) generated_8] (delay (con integer 42))]
        (delay (con integer 42))]
        (delay (con integer 42))]
        (delay (con integer 42))]
        (delay (con integer 42))]))
    [(builtin iData) (con integer 42)]])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- uplc before
[(lam generated_8
  (force
    [[[[[[(force (builtin chooseData)) generated_8] (delay (con integer 42))]
      (delay (con integer 42))]
      (delay (con integer 42))]
      (delay (con integer 42))]
      (delay (con integer 42))]))
  [(builtin iData) (con integer 42)]]
--- uplc after
[(lam builtin_10
  [(lam generated_9
    (force
      [[[[[[builtin_10 generated_9] (delay (con integer 42))] (delay (con integer 42))]
        (delay (con integer 42))]
        (delay (con integer 42))]
        (delay (con integer 42))]))
    [(builtin iData) (con integer 42)]])
  (force (builtin chooseData))]
--- result
(con integer 42)
--- logs
[]
