crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__builtin_sharing__discarded_list_default.snap
---
source: crates/nash-codegen/src/optimizer_tests/builtin_sharing.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
case@List mkNilData () of
  Nil -> 42
  Cons head#1 tail#2 -> 0
  _ -> case@Bool true of
    True -> trace "never" in error
    _ -> error
--- unoptimized UPLC
(program 1.1.0
  (case
    [(builtin mkNilData) (con unit ())]
    (lam head_1 (lam tail_2 (con integer 0)))
    (con integer 42)))
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- uplc before
(case
  [(builtin mkNilData) (con unit ())]
  (lam head_1 (lam tail_2 (con integer 0)))
  (con integer 42))
--- uplc after
(case
  [(builtin mkNilData) (con unit ())]
  (lam head_1 (lam tail_2 (con integer 0)))
  (con integer 42))
--- result
(con integer 42)
--- logs
[]
