crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__builtin_sharing__partial.snap
---
source: crates/nash-codegen/src/optimizer_tests/builtin_sharing.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let bare#1 : string -> int -> int = trace in
let partial#2 : int -> int = trace "partial" in
addInteger (bare#1 "bare" 20) (partial#2 22)
--- unoptimized UPLC
(program 1.1.0
  [(lam bare_1
    [(lam partial_2
      [[(builtin addInteger) [[bare_1 (con string "bare")] (con integer 20)]]
        [partial_2 (con integer 22)]])
      [(force (builtin trace)) (con string "partial")]])
    (force (builtin trace))])
--- optimized Core
let bare#3 : string -> int -> int = trace in
let partial#4 : int -> int = trace "partial" in
let anf#5 : int = bare#3 "bare" 20 in
let anf#6 : int = partial#4 22 in
addInteger anf#5 anf#6
--- optimized UPLC
(program 1.1.0
  [(lam builtin_9
    [(lam partial_2
      [(lam anf_7
        [(lam anf_8 [[(builtin addInteger) anf_7] anf_8]) [partial_2 (con integer 22)]])
        [[builtin_9 (con string "bare")] (con integer 20)]])
      [builtin_9 (con string "partial")]])
    (force (builtin trace))])
--- isolated pass
--- uplc before
[(lam bare_1
  [(lam partial_2
    [[(builtin addInteger) [[bare_1 (con string "bare")] (con integer 20)]]
      [partial_2 (con integer 22)]])
    [(force (builtin trace)) (con string "partial")]])
  (force (builtin trace))]
--- uplc after
[(lam builtin_3
  [(lam bare_1
    [(lam partial_2
      [[(builtin addInteger) [[bare_1 (con string "bare")] (con integer 20)]]
        [partial_2 (con integer 22)]])
      [builtin_3 (con string "partial")]])
    builtin_3])
  (force (builtin trace))]
--- result
(con integer 42)
--- logs
["bare", "partial"]
