crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__builtin_sharing__polymorphic.snap
---
source: crates/nash-codegen/src/optimizer_tests/builtin_sharing.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
case@Bool ifThenElse true true false of
  True -> ifThenElse true 42 0
  False -> 0
--- unoptimized UPLC
(program 1.1.0
  (case
    [[[(force (builtin ifThenElse)) (con bool True)] (con bool True)]
      (con bool False)]
    (con integer 0)
    [[[(force (builtin ifThenElse)) (con bool True)] (con integer 42)]
      (con integer 0)]))
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- uplc before
(case
  [[[(force (builtin ifThenElse)) (con bool True)] (con bool True)]
    (con bool False)]
  (con integer 0)
  [[[(force (builtin ifThenElse)) (con bool True)] (con integer 42)]
    (con integer 0)])
--- uplc after
[(lam builtin_1
  (case
    [[[builtin_1 (con bool True)] (con bool True)] (con bool False)]
    (con integer 0)
    [[[builtin_1 (con bool True)] (con integer 42)] (con integer 0)]))
  (force (builtin ifThenElse))]
--- result
(con integer 42)
--- logs
[]
