crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__builtin_sharing__two_forces.snap
---
source: crates/nash-codegen/src/optimizer_tests/builtin_sharing.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
unIData (fstPair (mkPairData (iData 42) (iData 42)))
--- unoptimized UPLC
(program 1.1.0
  [(builtin unIData)
    [(force (force (builtin fstPair)))
      [[(builtin mkPairData) [(builtin iData) (con integer 42)]]
        [(builtin iData) (con integer 42)]]]])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- uplc before
[(builtin unIData)
  [(force (force (builtin fstPair)))
    [[(builtin mkPairData) [(builtin iData) (con integer 42)]]
      [(builtin iData) (con integer 42)]]]]
--- uplc after
[(lam builtin_1
  [(builtin unIData)
    [builtin_1
      [[(builtin mkPairData) [(builtin iData) (con integer 42)]]
        [(builtin iData) (con integer 42)]]]])
  (force (force (builtin fstPair)))]
--- result
(con integer 42)
--- logs
[]
